# redged

./: Cargo.toml  README.md  rustfmt.toml
.kube/: bootstrap.yaml  ca.crt  client.crt
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: bootstrap.rs  config.rs  lib.rs  node_controller.rs  provider.rs
