[workspace]
resolver = "2"
members = [
    "cli",
    "core",
]

[workspace.dependencies]
anyhow = "1.0.75"
tracing-subscriber = "0.3"
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
kube = { version = "0.85", features = ["runtime"] }
k8s-openapi = { version = "0.19", features = ["latest"] }
http = "0.2.9"
futures = "0.3.29"
rcgen = "0.11.3"
chrono = "0.4"
time = "0.3.6"
base64 = "0.21.5"
pem = "3"
serde = "1"
secrecy = "0.8.0"
openssl = "0.9.95"
serde_yaml = "0.9.27"
hostname = "0.3.1"
pin-project = "1.1.3"