[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
core = {path = "../core"}