[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube.workspace = true
k8s-openapi.workspace = true
http.workspace = true
anyhow.workspace = true
futures.workspace = true
rcgen.workspace = true
chrono.workspace = true
time.workspace = true
base64.workspace = true
pem.workspace = true
serde.workspace = true
secrecy.workspace = true